--- a/app/src/main/res/layout/login_dialogue.xml
+++ b/app/src/main/res/layout/login_dialogue.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F1E9E9"
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Enter email: " />
+        android:hint="Enter username: " />
 
     <EditText
         android:id="@+id/loginPasswordEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:layout_below="@id/loginEmailEdit"
         android:hint="Enter password: "
         android:inputType="textPassword" />
 
@@ -27,7 +28,15 @@
         android:layout_margin="4dp"
         android:backgroundTint="#C3BABA"
         android:text="Log In"
+        android:layout_below="@id/loginPasswordEdit"
         android:textColor="#000000" />
-
-
-</LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#C3BABA"
+        android:textColor="#000000"
+        android:text="Back"
+        android:layout_alignRight="@id/login"
+        android:layout_below="@id/login"
+        android:id="@+id/login_back_button"/>
+</RelativeLayout>
