--- a/app/src/main/res/layout/signup_dialogue.xml
+++ b/app/src/main/res/layout/signup_dialogue.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,13 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Enter email:"
+        android:hint="Enter username:"
         android:id="@+id/signupEmailEdit"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:layout_below="@id/signupEmailEdit"
         android:hint="Enter Password: "
         android:id="@+id/signupPasswordEdit"
         android:inputType="textPassword"
@@ -24,8 +25,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
+        android:layout_below="@id/signupPasswordEdit"
         android:text="Sign Up"
         android:id="@+id/signup"
         android:backgroundTint="#C3BABA"
         android:textColor="#000000"/>
-</LinearLayout>
+
+    <Button
+        android:id="@+id/signup_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#C3BABA"
+        android:text="Back"
+        android:textColor="#000000"
+        android:layout_below="@id/signup"
+        android:layout_alignRight="@id/signup"
+        />
+
+
+</RelativeLayout>
