--- a/app/src/main/res/menu/home_bar_menu.xml
+++ b/app/src/main/res/menu/home_bar_menu.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/settings_item"
-        android:title="Settings" />
-    <item
-        android:id="@+id/home_item"
-        android:title="Home" />
     <item
         android:id="@+id/player_item"
-        android:title="Player" />
+        android:title="Player"
+        android:icon="@drawable/player_icon"/>
+
+    <item
+        android:id="@+id/home_item"
+        android:title="Home"
+        android:icon="@drawable/home_icon"/>
+    <item
+        android:id="@+id/library_item"
+        android:title="Library"
+        android:icon="@drawable/library_icon"/>
+
 </menu>
