--- a/app/src/main/res/layout/music_card.xml
+++ b/app/src/main/res/layout/music_card.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="350dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:backgroundTint="#CCCBCB"
     android:layout_gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
+    app:cardUseCompatPadding="true"
+    android:layout_marginTop="15dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+
     >
 
 
     <RelativeLayout
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
         <ImageView
             android:id="@+id/music_picture"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="350dp"
             android:src="@drawable/empty_card_image" />
 
